--- a/pond-dashboard.html
+++ b/pond-dashboard.html
@@ -310,8 +310,12 @@
         function isSystemOnline(timestamp) {
             const now = new Date();
             const time = new Date(timestamp);
-            const diffMins = Math.floor((now - time) / 60000);
-            return diffMins < 2;
+            const diffMs = now - time;
+            const diffMins = Math.floor(diffMs / 60000);
+            
+            // Consider online if last data within 5 minutes
+            // This accounts for ESP32 sending interval (30s) + network delays + Google Sheets cache
+            return diffMins < 5;
         }
 
         function createChart(labels, data) {
@@ -452,7 +456,3 @@
     </script>
 </body>
 </html>
-
-
-
-
